[package]
name = "rescaling-examples"
version = "0.1.0"
authors = ["Lorenzo Selvatici <selvatici.lorenzo@gmail.com>"]
edition = "2018"

[dependencies]
timely = { git = "https://github.com/strymon-system/timely-dataflow/", branch = "rescaling-p2p" }
dynamic_scaling_mechanism = { git = "https://github.com/strymon-system/megaphone", branch = "rescaling", features = ["bin-3"],  default-features = false }
colored = "1.8.0"
rdkafka = "0.14.1"
math="0.0.2"
rand="0.7.0"
streaming-harness = { version = "^0.1", features = ["hdrhist-support"] }
clap="2.33.0"
fnv="1.0.6"
hdrhist = "0.5.0"
abomonation="0.7.3"

